# Veritas

./: .env.example  .gitignore  AI-CLI-GUIDE.md  CHANGELOG.md  CODEX-TASKS.md  INDEPENDENT_MILESTONES.md  LICENSE  Makefile  PRD.md  PROJECT-LOG.md  README-STABLE-START.md  README.md  ROADMAP_V3_PRODUCT_COMPLETE.md  TROUBLESHOOTING.md  XIAOLEI-API-SPEC.md  check_routes.py  claude.md  cleanup.ps1  devlog.md  docker-compose.integration.yml  docker-compose.multi.yml  docker-compose.yml  download_proxy_papers.py  download_via_browser.py  ecosystem.config.js  roadmap.md  run_tests.ps1  start-abr.ps1  start-backend.ps1  start.bat  start.ps1  stop.bat  test_batch_oa.py  test_download.py  test_mdpi_debug.py  test_mdpi_debug2.py  test_new_downloader.py  test_oa_download.py  test_search.py  test_unpaywall.py
backend/: .agentb_cli_state.json  .env.example  Dockerfile.xiaolei_api  TASK_PRIORITY1_FIX.md  alembic.ini  (+43 more)
gp-viz/: .env.example  .gitignore  AI-CLI-GUIDE.md  Dockerfile  METADATA_ANALYSIS_GUIDE.md  METADATA_ANALYSIS_REPORT.md  PHASE_EXECUTION_LOG.md  README.md  VOSVIEWER_STYLE_SUMMARY.md  docker-compose.yml  pyproject.toml
gp-viz/app/: __init__.py  api_server.py  main.py
gp-viz/app/api/: __init__.py  routes.py
gp-viz/app/pages/: __init__.py  metadata_timeline.py  metadata_trend_analysis.py  scholar_influence.py  vosviewer_style.py
gp-viz/app/utils/: __init__.py  config.py  excel_probe.py  qdrant_client.py  scholar_influence.py  slr_viz.py  types.py
gp-viz/scripts/: check_environment.py  metadata_timeline_analysis.py
gp-viz/tests/: test_phase4_integration.py
(+541 files in other folders)
