[project]
name = "gp-viz"
version = "0.1.0"
description = "GP Paper 1 SLR visualization workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "openpyxl>=3.1.0",
    "plotly>=5.24.0",
    "kaleido>=0.2.1",
    "qdrant-client>=1.12.0",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "loguru>=0.7.2"
]

[project.scripts]
# Empty for now; CLI can be added in later phases.

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"